Fixed progressbar visibility by adding a CSS style for .w3-progressbar that sets the background-color.

--- a/rt106-app/css/rt106-styles.css
+++ b/rt106-app/css/rt106-styles.css
@@ -68,3 +68,7 @@ body {
   width: 150px;
   padding: 0px;
 }
+
+.w3-progressbar {
+  background-color: #85C1E9;
+}
